syntax = "proto3";

option go_package = "github.com/celestiaorg/celestia-node/share/pb;types";

import "pb/proof.proto"; // celestiaorg/nmt/pb/proof.proto

message HalfAxis {
    repeated bytes shares = 1;
    bool is_parity = 2;
}

message ShareWithProof {
    bytes share = 1;
    proof.pb.Proof proof = 2;
    AxisType proof_type = 3;
}

message NamespacedRow {
    repeated bytes shares = 1;
    proof.pb.Proof proof = 2;
}

enum AxisType {
    ROW = 0;
    COL = 1;
}